ci-cd-end2-end/infrastructure/ingress/artifactory-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: nginx
  name: artifactory
spec:
  rules:
  - host: "artifactory.devops-masterclass.link"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: artifactory
            port:
              number: 8080
  tls:
  - hosts:
    - "artifactory.devops-masterclass.link"
    secretName: "artifactory.devops-masterclass.link"
