ci-cd-end2-end/infrastructure/ingress/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: nginx
  name: jenkins
spec:
  rules:
  - host: "jenkins.devops-masterclass.link"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
  tls:
  - hosts:
    - "jenkins.devops-masterclass.link"
    secretName: "jenkins.devops-masterclass.link"
