ci-cd-end2-end/infrastructure/ingress/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: nginx
  name: vault
spec:
  rules:
  - host: "vault.devops-masterclass.link"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
  tls:
  - hosts:
    - "vault.devops-masterclass.link"
    secretName: "vault.devops-masterclass.link"
